# auth-rs

./: .env  Cargo.toml
src/: main.rs
src/entities/: mod.rs  pac.rs  user.rs
src/http/: mod.rs
src/http/controllers/: auth_controllers.rs  mod.rs  user_controllers.rs
src/http/requests/: auth_requests.rs  mod.rs
src/http/responses/: auth_responses.rs  mod.rs
src/http/routes/: api.rs
src/middlewares/: auth.rs
src/migrations/: 01_users_table.sql  02_personal_access_tokens_table.sql
src/services/: auth_service.rs  mod.rs  token_service.rs  user_service.rs
